--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-tactile
 
 title: Welcome to the Ruddyy's homepage.
- Description: beginner to coding.
+Description:Beginner to coding.
  
